# westonpro

./: .gitignore  README.md  README_zh.md  meson.build  meson_options.txt
compositor/: config-parser.c  cursor.c  keyboad.c  keyboard.c  log-file.c  log-internal.h  log-wayland.c  log.c  main.c  meson.build  option-parser.c  output.c  seat.c  server.c  shell.c  util.c  util.h  view.c  xdg.c
desktop-shell/: desktop-shell.c  desktop-shell.h  meson.build  xdg.c
include/: config-parser.h  log.h  server.h  weston-pro.h  wlrston.h
protocol/: meson.build
shared/: meson.build  os-compatibility.c  os-compatibility.h  util.c  util.h
